<resources>
    <string name="app_name">material-design-sample</string>
    <string name="backdrop_sheet_title_name">Sub header</string>
    <string name="backdrop_switch_layer">Switch layer</string>
    <string name="backdrop_toolbar_title_name">Shopping</string>
    <string name="backdrop_tune">Backdrop tune</string>
    <string name="backdrop_type1">Basic type</string>
    <string name="backdrop_type2">Coming soon</string>
    <string name="backdrop_under_detail_information">Detail information</string>
    <string name="backdrop_under_sheet_checkbox">Dummy check</string>
    <string name="bottom_bar_search">Search</string>
    <string name="bottom_bar_edit">Edit</string>
    <string name="bottom_bar_fab_position_button_center">Center</string>
    <string name="bottom_bar_fab_position_button_end">End</string>
    <string name="bottom_bar_fab_position_animation_button_slide">Slide</string>
    <string name="bottom_bar_fab_position_animation_button_scale">Scale</string>
    <string name="card_type_01">Type01</string>
    <string name="card_type_02">Type02</string>
    <string name="card_type_03">Type03</string>
    <string name="card_type_list">Type List Vertical</string>
    <string name="card_type_list_dashboard">Type List Dashboard</string>
    <string name="card_type_list_grid">Type List Grid</string>
    <string name="card_type_list_horizontal">Type List Horizontal</string>
    <string name="card_type_list_expand">Type List Expand</string>
    <string name="card_media_text">media text</string>
    <string name="card_secondary_text">Secondary text</string>
    <string name="card_detail_text">test!\ntest!\ntest!\ntest!\ntest!\ntest!\ntest!\ntest!\ntest!\ntest!\n</string>
    <string name="card_supporting_text">Card supporting text!\nThis is practice.</string>
    <string name="card_title">Card title</string>
    <string name="card_sales">Sales</string>
    <string name="card_sales_value_1">345.8 M</string>
    <string name="card_sales_value_2">+11% of target</string>
    <string name="card_conversion">Conversion</string>
    <string name="card_conversion_1">537</string>
    <string name="card_conversion_2">+22% of target</string>
    <string name="card_marketing">Marketing</string>
    <string name="card_marketing_value">123.4 M</string>
    <string name="card_action_1">ACTION 1</string>
    <string name="card_action_2">ACTION 2</string>
    <string name="coming_soon">Coming soon</string>
    <string name="dummy_user_image">dummy image</string>
    <string name="default_user_name">user name</string>
    <string name="default_user_greeting">Hello!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_type_01">Type01</string>
    <string name="dialog_type_02">Type02</string>
    <string name="dialog_type_03">Type03</string>
    <string name="sheet_operation_button_name">sheet</string>
    <string name="top_drawer_menu_01">About This App</string>
    <string name="top_drawer_menu_02">News</string>
    <string name="top_drawer_menu_03">Column</string>
    <string name="top_drawer_sub_menu_01">Setting</string>
    <string name="top_drawer_sub_menu_02">Help</string>
</resources>
