<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_type01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_type_01"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_type02"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_type02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_type_02"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/card_type01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_type03"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_type03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_type_03"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/card_type02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_type_list"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_type_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_type_list"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/card_type03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>