<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="text" type="String"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/simple_card_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginBottom="@dimen/mtrl_card_spacing"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/media_filed_constraint"
            android:layout_width="172dp"
            android:layout_height="160dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_filed_constraint"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:background="@color/colorWhite"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/card_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/card_conversion"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/card_secondary_text1" />

                <TextView
                    android:id="@+id/card_secondary_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="35sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/card_conversion_1"
                    app:layout_constraintTop_toBottomOf="@+id/card_title_text"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/card_secondary_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/card_conversion_2"
                    app:layout_constraintTop_toBottomOf="@+id/card_secondary_text1"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/media_image"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/colorWhite"
                app:srcCompat="@drawable/ic_arrow_drop_up_24dp"
                app:layout_constraintTop_toBottomOf="@+id/text_filed_constraint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/card_media_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>