<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="490dp"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/media_filed_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_filed_constraint"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="@color/colorWhite"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/media_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/header_thumbnail"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_person_black_24dp"
                app:civ_circle_background_color="@color/colorLightGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/header_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:text="@string/card_title"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/subhead_title_text"
                app:layout_constraintStart_toEndOf="@id/header_thumbnail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subhead_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:text="@string/card_secondary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/header_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/header_title_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/media_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:srcCompat="@drawable/sample_card_image"
            app:layout_constraintTop_toBottomOf="@id/header_filed_constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/card_media_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_filed_constraint"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="@color/colorWhite"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_filed_constraint">

            <TextView
                android:id="@+id/card_supporting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/card_supporting_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_filed_constraint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_filed_constraint">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/card_action_01"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_action_1"
                android:textColor="@color/colorPrimary"
                android:insetBottom="0dp"
                app:backgroundTint="@color/colorWhiteThin00"
                app:rippleColor="@color/colorLightGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/card_action_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/card_action_02"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_action_2"
                android:textColor="@color/colorPrimary"
                android:insetBottom="0dp"
                app:backgroundTint="@color/colorWhiteThin00"
                app:rippleColor="@color/colorLightGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_action_01"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/card_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_24dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/card_shard_button"/>


            <ImageView
                android:id="@+id/card_shard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_24dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
