<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/simple_card_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/colorLightGray"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/item_expandable_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/media_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/card_media_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expand_control_button_ground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media_image">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expand_control_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="expand"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/expandable_text"
            android:layout_marginTop="195dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/card_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/card_title"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/card_secondary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="2dp"
                android:text="@string/card_secondary_text"/>

        </RelativeLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>