<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="text" type="String"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:animateLayoutChanges="true"
        android:id="@+id/card_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_top_height_expand"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        app:cardBackgroundColor="@color/colorLightGray"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/media_filed_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/media_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_person_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/card_media_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expand_control_button_ground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/media_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text_filed_constraint">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expand_control_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="expand"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:animateLayoutChanges="true"
                android:id="@+id/text_filed_constraint"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/expand_control_button_ground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/card_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/card_title"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/card_secondary_text" />

                <TextView
                    android:id="@+id/card_secondary_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/card_secondary_text"
                    app:layout_constraintTop_toBottomOf="@+id/card_title_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>